cfn_benchmark/cfn_templates/tuimac__cloudformation/poc/createPocEnv.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Create VPN Server

Parameters:
  PoCTagKey:
    Type: String
    Default: Environment

  PoCTagValue:
    Type: String
    Default: ping

  AMIId:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2

Resources:
  PoCVpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 192.168.0.0/28
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags:
        - Key: !Ref PoCTagKey
          Value: !Ref PoCTagValue
        - Key: Name
          Value: PoC-VPC-01

  PoCSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref PoCVpc
      CidrBlock: 192.168.0.0/28
      AvailabilityZone: ap-northeast-1c
      MapPublicIpOnLaunch: true
      Tags:
        - Key: !Ref PoCTagKey
          Value: !Ref PoCTagValue
        - Key: Name
          Value: PoC-Subnet-Trust-01

  PoCInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: !Ref PoCTagKey
          Value: !Ref PoCTagValue
        - Key: Name
          Value: PoC-IGW-01

  PoCInternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref PoCInternetGateway
      VpcId: !Ref PoCVpc

  PoCRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref PoCVpc
      Tags:
        - Key: !Ref PoCTagKey
          Value: !Ref PoCTagValue
        - Key: Name
          Value: PoC-RouteTable-01

  PoCRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PoCRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref PoCInternetGateway

  PoCRouteTableAccociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PoCRouteTable
      SubnetId: !Ref PoCSubnet

  PoCSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: PoC-SG-01
      GroupDescription: for PoC Server
      VpcId: !Ref PoCVpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
          Description: Get web request
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
          Description: Get ssh request
      Tags:
        - Key: !Ref PoCTagKey
          Value: !Ref PoCTagValue
        - Key: Name
          Value: PoC-SG

  PoCInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref AMIId
      InstanceType: t2.micro
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeleteOnTermination: true
          Description: PoCPoC ENI
          DeviceIndex: 0
          GroupSet:
            - !Ref PoCSecurityGroup
          SubnetId: !Ref PoCSubnet
      Tags:
        - Key: !Ref PoCTagKey
          Value: !Ref PoCTagValue
        - Key: Name
          Value: poc
